# Resume-Generator

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  requirements-dev.txt
client/: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/components/: FileUploadSingle.jsx  ResumeBuilder.jsx  Section.jsx
server/: .gitignore  README.md  pyproject.toml  pytest.ini
server/data/: sample_data.yml
server/resume_generator/: __init__.py  config.py  dependencies.py  dev.py  main.py  schemas.py  services.py
server/resume_generator/routes/: generator.py
server/resume_generator/services/: encoding.py  generator.py
server/resume_generator/test/: fixtures.py  test_generator.py
server/resume_generator/test/data/: sample_data.yml  template.tex
server/tests/: fixtures.py  test_generator.py
