[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Robert Babaev <github@robertbabaev.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
inquirerpy = "^0.3.4"
strenum = "^0.4.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
