[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Robert Babaev <github@robertbabaev.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
inquirerpy = "^0.3.4"
strenum = "^0.4.15"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
